<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user_profile.view.MyProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_background_color"
        android:orientation="vertical"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           >

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_marginEnd="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_marginStart="@dimen/margin_5dp"
                android:layout_marginTop="@dimen/margin_5dp">

                <com.example.lovekeshkumar.projectmvpbase.font.FontelloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fontello_cart"
                    android:textColor="@color/white_100_percent"
                    android:textSize="25sp" />

                <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                    android:id="@+id/header_title"
                    style="@style/TextViewAppearance.Caption1"
                    android:layout_below="@+id/image_user"
                    android:layout_centerHorizontal="true"
                    android:text="@string/myprofile"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                    android:id="@+id/edit"
                    style="@style/TextViewAppearance.Caption1"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:gravity="left"
                    android:text="Edit"
                    android:textSize="16sp" />

            </RelativeLayout>


            <include
                layout="@layout/custom_rounded_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/header"
                android:layout_centerHorizontal="true">

            </include>

            <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                android:id="@+id/user_name"
                style="@style/TextViewAppearance.Caption1"
                android:layout_below="@+id/image_user"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_5dp"
                android:text="daisycheningham"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                android:id="@+id/tag_line"
                style="@style/TextViewAppearance.Caption1.1"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="2"
                android:text="Don't give up, your dream is the greatest thing in the world!"
                android:textSize="18sp" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tag_line"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@color/divider_color_wahhao" />

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v1"
                android:orientation="horizontal"
                android:padding="@dimen/margin_5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1">

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/level_count"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"

                        android:text="263"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textStyle="bold" />

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/level_txt"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/level_count"
                        android:layout_centerHorizontal="true"
                        android:text="@string/level"
                        android:textAllCaps="true"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textSize="13sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/followers_count"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"

                        android:text="3.2K"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textStyle="bold" />

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/follower_txt"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/followers_count"
                        android:layout_centerHorizontal="true"
                        android:text="@string/followers"
                        android:textAllCaps="true"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textSize="13sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/following_count"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"

                        android:text="925"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textStyle="bold" />

                    <com.example.lovekeshkumar.projectmvpbase.font.RobotoTextView
                        android:id="@+id/following_txt"
                        style="@style/TextViewAppearance.Caption1.1"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/following_count"
                        android:layout_centerHorizontal="true"
                        android:text="@string/following"
                        android:textAllCaps="true"
                        android:textColor="@color/profile_text_color_wahhao"
                        android:textSize="13sp" />


                </RelativeLayout>


            </LinearLayout>
            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/l1"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@color/divider_color_wahhao" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp">

            <include
                layout="@layout/custom_tab_layout_with_indicator"/>
        </RelativeLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>